# GichanFormantcode

./: .gitignore  BUILD.md  GichanFormant.iss  LICENSE  README.md  build_base.py  complete.txt  config.py  draw_mode.md  error_log.txt  errors.txt  extract.py  extract_compare.py  fix_compare_plot.py  info.txt  list_compare_methods.py  main.py  pyproject.toml  refactor_compare.py  refactor_layer_dock.py  refactor_popup.py  refactor_popup_phase3c.py  refactoring_analysis.md  test_imports.py  test_layer_dock.py  test_popup_import.py
.venv_/: pyvenv.cfg
core/: compare_runtime.py  compare_series.py  compare_settings.py  controller.py  preloader.py  state_manager.py  workers.py
docs/: compare-draw-migration-checklist.md  compare-nway-foundation.md  layer_dock_refactor_plan.md  layer_logic_extraction_plan.md  plan.md  ref_vertical_py_list.md  refactoring_analysis.md  research.md
draw/: __init__.py  draw_common.py  draw_layer_render.py  draw_line.py  draw_polygon.py  draw_reference.py  draw_text.py  indicator.py  legend_helpers.py  legend_render.py  plot_fonts.py  text_render.py
engine/: plot_engine.py
model/: combined_dataset.py  data_processor.py  formant_txt_export.py
scripts/: sync_version.py
tests/: test_combined_dataset.py  test_compare_series.py  test_controller.py  test_data_processor.py  test_display_utils_combined.py  test_draw_common.py  test_draw_layer_logic.py  test_draw_layer_render.py  test_draw_line_tool.py  test_draw_reference.py  test_draw_reference_render.py  test_draw_text.py  test_draw_text_tool.py  test_formant_pair_distance.py  (+6 more)
(+62 files in other folders)
