[project]
name = "gichan-formant"
version = "2.3.1.2"
description = "A formant picture generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyqt6>=6.10.2",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E402"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
